# VibeCleaner

./: .gitignore  .mailmap  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  MANIFEST.in  README.md  SECURITY.md  backlog.yaml  pyproject.toml  ticket_sample.md
.claude/: settings.local.json
.github/workflows/: ci.yml  publish.yml  vibecleaner-phase-gate.yml  vibeops-phase-gate.yml
docs/: CAUTIONS.md  REFLECTIONS.md  VISIBILITY.md  arxiv-draft.md
scripts/: audit_emails.sh  capture_portal.py  rewrite_email.sh
vibecleaner/: ai_assistant.py  cleaner.py  cli.py  config.py  gh_issues.py  otel_export.py  portal.py  prompt_builder.py  providers.py  report.py  scheduler.py  telemetry.py  utils.py
vibecleaner/config/: constraints-python.txt  rules.md
vibecleaner/templates/prompts/: design.md  discovery.md  mvp.md
vibecleaner/web/: index.html  style.css
vibeops/: cli.py  otel_export.py  prompt_builder.py  providers.py  report.py  swachh.py  telemetry.py  utils.py
vibeops/config/: agents.yaml  constraints-node.txt  phase.yaml  router.yaml  stack.md
vibeops/hooks/: pre-commit
vibeops/templates/: pr_template.md
vibeops/templates/prompts/: production.md
vibeops/web/: app.js  index.html
