[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "vibeops"
version = "0.2.0"
description = "Practical vibe coding orchestration for Claude + Codex"
requires-python = ">=3.9"
readme = "README.md"
license = { file = "LICENSE" }
dependencies = [
  "PyYAML>=6.0",
  "platformdirs>=4",
]
classifiers = [
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.10",
  "Operating System :: OS Independent",
  "Intended Audience :: Developers",
  "Topic :: Software Development :: Build Tools",
]

[project.scripts]
vibeops = "vibeops.cli:main"

[tool.setuptools]
include-package-data = true

[tool.setuptools.package-data]
vibeops = [
  "web/*",
  "templates/*",
  "templates/prompts/*",
  "config/*",
  "hooks/*",
]

[tool.ruff]
target-version = "py310"
line-length = 100
select = [
  "E",  # pycodestyle errors
  "F",  # pyflakes
  "I",  # isort
]
ignore = []
