[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "vibecleaner"
version = "0.2.0"
description = "Automated code quality and cleanup bot for development workflows"
requires-python = ">=3.9"
readme = "README.md"
license = { file = "LICENSE" }
dependencies = [
  "PyYAML>=6.0",
  "platformdirs>=4",
]
classifiers = [
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.10",
  "Operating System :: OS Independent",
  "Intended Audience :: Developers",
  "Topic :: Software Development :: Build Tools",
]

[project.scripts]
vibecleaner = "vibecleaner.cli:main"

[tool.setuptools]
include-package-data = true

[tool.setuptools.package-data]
vibecleaner = [
  "web/*",
  "templates/*",
  "templates/prompts/*",
  "config/*",
  "hooks/*",
]

[tool.ruff]
target-version = "py310"
line-length = 100
select = [
  "E",  # pycodestyle errors
  "F",  # pyflakes
  "I",  # isort
]
ignore = []
