[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "vibecleaner"
version = "1.0.0"
description = "Smart downloads folder organizer that automatically cleans and categorizes files"
requires-python = ">=3.9"
readme = "README.md"
license = { file = "LICENSE" }
dependencies = [
  "PyYAML>=6.0",
]
classifiers = [
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Operating System :: OS Independent",
  "Intended Audience :: End Users/Desktop",
  "Topic :: Desktop Environment :: File Managers",
  "Topic :: System :: Filesystems",
  "Topic :: Utilities",
]

[project.scripts]
vibecleaner = "vibecleaner.cli:main"

[tool.setuptools]
include-package-data = true

[tool.setuptools.package-data]
vibecleaner = [
  "web/*",
  "templates/*",
  "templates/prompts/*",
  "config/*",
  "hooks/*",
]

[tool.ruff]
target-version = "py310"
line-length = 100
select = [
  "E",  # pycodestyle errors
  "F",  # pyflakes
  "I",  # isort
]
ignore = []
